--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+asgiref==3.5.2
 Django==3.2
-psycopg2-binary
-django-environ
-Pillow
+django-environ==0.9.0
+Pillow==9.2.0
+psycopg2-binary==2.9.4
+pytz==2022.4
+sqlparse==0.4.3
